--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 
 body * {
-  font-size: 80px;
+  font-size: 60px;
 }
 
 code {
@@ -19,5 +19,6 @@ code {
 }
 
 button {
-  margin-right: 40px;
+  margin-right: 20px;
+  min-width: 150px;
 }
